<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="24dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:elevation="5dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/rating_bg">

        <TextView
            android:id="@+id/ratingTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            tools:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ratingMessageTv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingTitleTv"
            android:paddingTop="10dp"
            android:text="@string/we_would_love_to_hear_from_you"
            android:textColor="@color/rating_text_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingTitleTv" />

        <TextView
            android:id="@+id/ratingMessageTv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingTitleTv"
            android:paddingBottom="10dp"
            android:text="@string/how_is_your_experience_using_our_app"
            android:textColor="@color/rating_text_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingMessageTv1" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/rating_bar"
            style="@style/Widget.MaterialRatingBar.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingMessageTv1"
            android:progressBackgroundTint="@color/rating_btn_bg"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingMessageTv2"
            app:mrb_fillBackgroundStars="true"
            app:mrb_progressTint="@color/colorPrimary"
            app:mrb_secondaryProgressTint="@color/colorPrimary"/>


        <TextView
            android:id="@+id/rate_later"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/rating_btn_bg"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/remind_later"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rate_now"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/rate_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/rate_us"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/rate_later" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>